# Time-Series-Power

./: .gitattributes  .gitignore  pyproject.toml
.ipynb_checkpoints/: util-checkpoint.py
notebooks/: 0-gm-explore.ipynb
notebooks/.ipynb_checkpoints/: 0-gm-explore-checkpoint.ipynb
src/: dataset.py  plots.py  util.py
src/modeling/: hello.py  train_arima.py  train_lstm.py  train_xgb.py
src/models/: arima.py  lstm.py  randomsearchcv.py  xgb.py
src/tests/: test_myXgb.py  test_util.py
