[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "git-filter-repo>=2.45.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tensorflow>=2.17.0",
    "xgboost>=2.1.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
